# argument-parser

./: .gitignore  CMakeLists.txt  README.md  repomix-output.xml
.github/workflows/: ci.yml
lib/: CMakeLists.txt  argparser  argparser.cpp  argparser.h  argparser.hpp  hoot  hoot.cpp
tests/: argparser_tests  argparser_tests.cpp
